--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_USER=postgres
 DB_PASSWORD=MUHLESS717GG
 DB_NAME=ady-trans-jaya
 DB_PORT=5432
-DATABASE_URL=postgresql://postgres:WhJxSwTXHKuKddwftVZlJImReOATtjud@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:wIQMrKMFfkzgoHyCozyFQXCVovbOrDLv@postgres.railway.app:5432/railway
