make cars API with contollers

--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ DB_USER=postgres
 DB_PASSWORD=MUHLESS717GG
 DB_NAME=ady-trans-jaya
 DB_PORT=5432
-DATABASE_URL=postgresql://postgres:wIQMrKMFfkzgoHyCozyFQXCVovbOrDLv@postgres.railway.app:5432/railway
+# DATABASE_URL=postgresql://postgres:wIQMrKMFfkzgoHyCozyFQXCVovbOrDLv@postgres.railway.internal:5432/railway
+
+DATABASE_URL="postgres://postgres:MUHLESS717GG@localhost:5432/ady-trans-jaya?sslmode=disable"
